<resources>
    <string name="app_name">MyWeather</string>
    <string name="please_input_city_code">请输入城市编码</string>
    <string name="search">查询</string>
    <string name="choose_again">重新选择</string>
    <string name="my_concern">我的关注</string>
    <string name="refresh">刷新</string>
    <string name="focus">关注</string>
    <string name="default_city">示例城市</string>
    <string name="default_weather">示例天气</string>
    <string name="default_tmp">N/A</string>
    <string name="default_tmp_range">示例温度范围</string>
    <string name="default_detail">示例文字</string>
</resources>