<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowWeather"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:text="@string/default_city"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/weather_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_weather"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/current_tmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="-20dp"
                android:text="@string/default_tmp"
                android:textSize="120sp"/>

            <TextView
                android:id="@+id/tmp_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_tmp_range"
                android:textSize="30sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/darker_gray"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:id="@+id/day_0_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_0_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_0_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/day_1_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_1_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_1_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/day_2_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_2_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_2_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/day_3_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_3_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_3_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/day_4_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_4_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_4_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/day_5_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_5_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_5_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/day_6_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_6_weather_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/day_6_tmp_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
                </TableRow>

            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginHorizontal="10dp"
                android:text="@string/default_detail"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"/>
    <Button
        android:id="@+id/focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/focus"/>
</LinearLayout>